Update stage blurb
Switch to lorum ipsum.

--- a/case-view/index.html
+++ b/case-view/index.html
@@ -49,7 +49,7 @@ title: CMS project
           </div>
           <!-- Onscreen guidance -->
           <div class="stage-section">
-            <p>An Education, Health and Care Plan (EHC Plan) must be issued no later than 20 weeks after the request for EHC needs assessment was submitted. The plan is initially put together using all of the contributed advice and views from the Assessment stage. This can be changed... <a href="#">read more</a></p>
+            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur... <a href="#">read more</a></p>
           </div>
           <!-- Tabs -->
           <ul class="nav nav-tabs">
