Work tray build
Adding a work tray page.

--- a/case-view/index.html
+++ b/case-view/index.html
@@ -5,13 +5,13 @@ title: CMS project
 
 <div class="page-content">
   <div class="row container-fluid g-0">
-    <div class="col-12">
+    <div class="col">
       <div class="row container-fluid mx-0 p-0">
 
         {% include case-sidebar.html %}
 
         <!-- Case stage content -->
-        <div class="col-12 stage-content pb-3">
+        <div class="col stage-content pb-3">
 
           {% include assessment-progress.html %}
 
