--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: CMS project
 
 <div class="container-fluid home-bg">
 	<div class="row" style="height:100%;">
-		<div class="col-12 col-md-6 col-lg-4 login-box d-flex justify-content-between p-5 ms-auto">
+		<div class="col col-md-6 col-lg-4 login-box d-flex justify-content-between p-5 ms-auto">
 			<div class="login-top">
 				<img src="/assets/images/placeholder.jpeg" alt="" height="90" class="ms-auto d-block mb-4">
 				<h4>CMS Portal</h4>
@@ -25,7 +25,7 @@ title: CMS project
 					<small><a href="#">Forgotten password?</a></small>
 				</p>
 				<p>
-					<a class="btn btn-primary mt-3" href="/case-view">Log in</a>
+					<a class="btn btn-primary mt-3" href="/work-tray">Log in</a>
 				</p>
 			</div>
 			<div class="login-bottom">
