--- a/work-tray/index.html
+++ b/work-tray/index.html
@@ -1,117 +1,264 @@
 ---
 layout: default
-title: CMS project
+title: Work tray
 ---
 
-<div class="page-content">
-  <div class="row container-fluid g-0">
-    <div class="col">
-      <div class="row container-fluid mx-0 p-0">
-
-        {% include search-sidebar.html %}
-
-        <!-- Case stage content -->
-        <div class="col stage-content pt-4 pb-3">
-          <h2>My children and young people</h2>
-          <p>Quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur... <a href="#">read more</a></p>
-          <!-- Tabs -->
-          <ul class="nav nav-tabs">
-            <li class="nav-item">
-              <a class="nav-link tab active" aria-current="page" href="#">Cases</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link tab" href="#">Tasks</a>
-            </li>
+<div class="row container-fluid page-content g-0">
+  <!-- Page content -->
+  <div class="col work-tray-content pt-4 pb-3">
+    <h2>My children and young people</h2>
+    <p>Quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur... <a href="#">read more</a></p>
+    <!-- Tabs -->
+    <ul class="nav nav-tabs">
+      <li class="nav-item">
+        <a class="nav-link tab active" aria-current="page" href="#">Cases (79)</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link tab" href="#">Tasks (11)</a>
+      </li>
+    </ul>
+    <!-- Search cases -->
+    <div class="row mt-4 pt-1 px-2 pb-3 g-3 align-items-center search-bar">
+      <div class="col-auto">
+        <label for="inputTerm" class="col-form-label">Search</label>
+      </div>
+      <div class="col-auto">
+        <input type="text" id="inputTerm" class="form-control" aria-describedby="termHelpInline" placeholder="Name or reference">
+      </div>
+      <div class="col-auto">
+        <a class="btn btn-secondary" href="#"><i class="bi bi-search"></i> Search</a>
+        <a class="btn btn-secondary" href="#" data-bs-toggle="modal" data-bs-target="#saveSearchModal"><i class="bi bi-save"></i> Save</a>
+        <a class="btn btn-secondary" href="#"><i class="bi bi-arrow-clockwise"></i> Reset</a>
+      </div>
+      <div class="col-auto">
+        <div class="input-group">
+          <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">Saved searches</button>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">New requests</a></li>
+            <li><a class="dropdown-item" href="#">My assessments</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li><a class="dropdown-item" href="#">Edit</a></li>
           </ul>
-          <!-- Search results -->
-          <div class="col pt-3 pb-3">
-            <!-- Onscreen guidance -->
-            <div class="results-section">
-              <!-- Sort options -->
-              <div class="row mb-3">
-                <div class="col">
-                  <p><strong>1-5</strong> of <strong>5</strong> cases based on your current search options <a href="#" data-bs-toggle="modal" data-bs-target="#guidanceModal"><i class="bi bi-question-circle"></i></a></p>
-                </div>
-              </div>
-              <!-- Search results -->
-              <div class="table-responsive">
-                <table class="table table-borderless align-middle">
-                  <thead>
-                    <tr>
-                      <th scope="col"></th>
-                      <th scope="col">Name</th>
-                      <th scope="col">Setting</th>
-                      <th scope="col">Status</th>
-                      <th scope="col">Next due</th>
-                      <th scope="col">Alert</th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <tr>
-                      <td><img src="/assets/images/boy in a forest.jpg" class="rounded d-block avatar-card" alt="avatar"></td>
-                      <td><a href="/case-view">Alvin Hanson</a></td>
-                      <td>Greenhill School<br>Year 9</td>
-                      <td>Stage 1</td>
-                      <td>17/12/2020</td>
-                      <td><span class="badge rounded-pill bg-success">On track</span></td>
-                    </tr>
-
-                    <tr>
-                      <td><img src="/assets/images/boy running.jpg" class="rounded d-block avatar-card" alt="avatar"></td>
-                      <td><a href="#">Ellery Holden</a></td>
-                      <td>Greenhill School<br>Year 4</td>
-                      <td>Stage 1</td>
-                      <td>17/12/2020</td>
-                      <td><span class="badge rounded-pill bg-warning text-dark">Pending deadline</span></td>
-                    </tr>
-
-                    <tr>
-                      <td><img src="/assets/images/girl at school.jpg" class="rounded d-block avatar-card" alt="avatar"></td>
-                      <td><a href="#">Sienna Reid</a></td>
-                      <td>Greenhill School<br>Year 2</td>
-                      <td>Stage 1</td>
-                      <td>17/12/2020</td>
-                      <td><span class="badge rounded-pill bg-success">On track</span></td>
-                    </tr>
-
-                    <tr>
-                      <td><img src="/assets/images/teenager at college.jpg" class="rounded d-block avatar-card" alt="avatar"></td>
-                      <td><a href="#">Chandler Tate</a></td>
-                      <td>Greenhill School<br>Year 13</td>
-                      <td>Stage 1</td>
-                      <td>17/12/2020</td>
-                      <td><span class="badge rounded-pill bg-danger">Overdue deadline</span></td>
-                    </tr>
-
-                    <tr>
-                      <td><img src="/assets/images/placeholder.jpeg" class="rounded d-block avatar-card" alt="avatar"></td>
-                      <td><a href="#">Victor Wagner</a></td>
-                      <td>Greenhill School<br>Year 11</td>
-                      <td>Stage 1</td>
-                      <td>17/12/2020</td>
-                      <td><span class="badge rounded-pill bg-success">On track</span></td>
-                    </tr>
-                  </tbody>
-                </table>
-              </div>
-
-              <nav aria-label="Page navigation example">
-                <ul class="pagination justify-content-center my-5">
-                  <li class="page-item disabled">
-                    <a class="page-link" href="#" tabindex="-1" aria-disabled="true">Previous</a>
-                  </li>
-                  <li class="page-item active"><a class="page-link" href="#">1</a></li>
-                  <li class="page-item"><a class="page-link" href="#">2</a></li>
-                  <li class="page-item"><a class="page-link" href="#">3</a></li>
-                  <li class="page-item">
-                    <a class="page-link" href="#">Next</a>
-                  </li>
-                </ul>
-              </nav>
-            </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-3 py-4 pe-4 gs-0">
+        <div>
+          <h4>Filter</h4>
+          <div class="dropdown mb-2">
+            <a href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+              Case status <i class="bi bi-caret-down"></i>
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+              <li><h6 class="dropdown-header">Assessment</h6></li>
+              <li><a class="dropdown-item" href="#">New request</a></li>
+              <li><a class="dropdown-item" href="#">Request</a></li>
+              <li><a class="dropdown-item" href="#">Assessment decision</a></li>
+              <li><a class="dropdown-item" href="#">Assessment not agreed</a></li>
+              <li><a class="dropdown-item" href="#">Assessment</a></li>
+              <li><a class="dropdown-item" href="#">Plan decision</a></li>
+              <li><a class="dropdown-item" href="#">Plan not agreed</a></li>
+              <li><a class="dropdown-item" href="#">Draft EHC Plan</a></li>
+              <li><h6 class="dropdown-header">Review</h6></li>
+              <li><a class="dropdown-item" href="#">Pending review</a></li>
+              <li><a class="dropdown-item" href="#">Arrange review</a></li>
+              <li><a class="dropdown-item" href="#">Contribute views</a></li>
+              <li><a class="dropdown-item" href="#">Meeting</a></li>
+              <li><a class="dropdown-item" href="#">Report</a></li>
+              <li><a class="dropdown-item" href="#">Review decision</a></li>
+              <li><a class="dropdown-item" href="#">Proposed amendment</a></li>
+              <li><h6 class="dropdown-header">Other</h6></li>
+              <li><a class="dropdown-item" href="#">Proposed amendment w/o review</a></li>
+              <li><a class="dropdown-item" href="#">Proposed ceased</a></li>
+              <li><a class="dropdown-item" href="#">Ceased EHC Plan</a></li>
+              <li><a class="dropdown-item" href="#">Closed outside of process</a></li>
+            </ul>
           </div>
+          <div class="dropdown mb-2">
+            <a href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+              Case co-ordinator <i class="bi bi-caret-down"></i>
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+              <li><a class="dropdown-item" href="#">Adrian Cole</a></li>
+              <li><a class="dropdown-item" href="#">Blanche Fox</a></li>
+              <li><a class="dropdown-item" href="#">Ralph Williamson</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="#">Unassigned</a></li>
+            </ul>
+          </div>
+          <div class="dropdown mb-2">
+            <a href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+              Setting <i class="bi bi-caret-down"></i>
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+              <li><a class="dropdown-item" href="#">Busy Bees Nursery</a></li>
+              <li><a class="dropdown-item" href="#">Greenhill School</a></li>
+              <li><a class="dropdown-item" href="#">St Mary's Primary School</a></li>
+              <li><a class="dropdown-item" href="#">The Tim Peake School of Technology</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="#">Unattached</a></li>
+            </ul>
+          </div>
+          <div class="dropdown mb-2">
+            <a href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+              Year group <i class="bi bi-caret-down"></i>
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+              <li><a class="dropdown-item" href="#">Nursery</a></li>
+              <li><a class="dropdown-item" href="#">Reception</a></li>
+              <li><a class="dropdown-item" href="#">Year 1</a></li>
+              <li><a class="dropdown-item" href="#">Year 2</a></li>
+              <li><a class="dropdown-item" href="#">Year 3</a></li>
+              <li><a class="dropdown-item" href="#">Year 4</a></li>
+              <li><a class="dropdown-item" href="#">Year 5</a></li>
+              <li><a class="dropdown-item" href="#">Year 6</a></li>
+              <li><a class="dropdown-item" href="#">Year 7</a></li>
+              <li><a class="dropdown-item" href="#">Year 8</a></li>
+              <li><a class="dropdown-item" href="#">Year 9</a></li>
+              <li><a class="dropdown-item" href="#">Year 10</a></li>
+              <li><a class="dropdown-item" href="#">Year 11</a></li>
+              <li><a class="dropdown-item" href="#">Year 12</a></li>
+              <li><a class="dropdown-item" href="#">Year 13</a></li>
+              <li><a class="dropdown-item" href="#">Year 14</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="#">None recorded</a></li>
+            </ul>
+          </div>
+          <div class="dropdown mb-2">
+            <a href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+              Last updated <i class="bi bi-caret-down"></i>
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+              <li>
+                <input type="date" class="form-control" id="lastUpdatedDateInput" placeholder="">
+            </li>
+            </ul>
+          </div>
+
+          <div class="form-check pt-3">
+            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+            <label class="form-check-label" for="flexCheckDefault">
+              Impending deadline
+            </label>
+          </div>
+          <div class="form-check mb-3">
+            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+            <label class="form-check-label" for="flexCheckDefault">
+              Overdue deadline
+            </label>
+          </div>
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+            <label class="form-check-label" for="flexCheckDefault">
+              Safeguarding
+            </label>
+          </div>
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+            <label class="form-check-label" for="flexCheckDefault">
+              EOTAS
+            </label>
+          </div>
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+            <label class="form-check-label" for="flexCheckDefault">
+              Looked after child
+            </label>
+          </div>
+          <div class="form-check mb-3">
+            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+            <label class="form-check-label" for="flexCheckDefault">
+              NEET
+            </label>
+          </div>
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+            <label class="form-check-label" for="flexCheckDefault">
+              Imported plan
+            </label>
+          </div>
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+            <label class="form-check-label" for="flexCheckDefault">
+              Hide closed cases
+            </label>
+          </div>
+        </div>
+      </div>
+      <div class="col-9 py-4 ps-4 ge-0">
+        <p class="text-muted"><strong>1-5</strong> of <strong>5</strong> cases based on your current search options <a href="#" data-bs-toggle="modal" data-bs-target="#guidanceModal"><i class="bi bi-question-circle"></i></a></p>
+          <!-- Search results -->
+          <div class="table-responsive">
+            <table class="table table-borderless align-middle">
+              <thead>
+                <tr>
+                  <th scope="col"></th>
+                  <th scope="col">Name <i class="bi bi-sort-alpha-down"></i></th>
+                  <th scope="col">Setting</th>
+                  <th scope="col">Status</th>
+                  <th scope="col">Next due</th>
+                  <th scope="col">Alert</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td><img src="/assets/images/boy in a forest.jpg" class="rounded d-block avatar-card" alt="avatar"></td>
+                  <td><a href="/case-view">Hanson, Alvin</a></td>
+                  <td>Greenhill School<br>Year 9</td>
+                  <td>Stage 1</td>
+                  <td>17/12/2020</td>
+                  <td><span class="badge rounded-pill bg-info text-dark">None</span></td>
+                </tr>
+                <tr>
+                  <td><img src="/assets/images/boy running.jpg" class="rounded d-block avatar-card" alt="avatar"></td>
+                  <td><a href="#">Holden, Ellery</a></td>
+                  <td>Greenhill School<br>Year 4</td>
+                  <td>Stage 1</td>
+                  <td>17/12/2020</td>
+                  <td><span class="badge rounded-pill bg-warning text-dark">Pending deadline</span></td>
+                </tr>
+                <tr>
+                  <td><img src="/assets/images/girl at school.jpg" class="rounded d-block avatar-card" alt="avatar"></td>
+                  <td><a href="#">Reid, Sienna</a></td>
+                  <td>Greenhill School<br>Year 2</td>
+                  <td>Stage 1</td>
+                  <td>17/12/2020</td>
+                  <td><span class="badge rounded-pill bg-info text-dark">None</span></td>
+                </tr>
+                <tr>
+                  <td><img src="/assets/images/teenager at college.jpg" class="rounded d-block avatar-card" alt="avatar"></td>
+                  <td><a href="#">Tate, Chandler</a></td>
+                  <td>Greenhill School<br>Year 13</td>
+                  <td>Stage 1</td>
+                  <td>17/12/2020</td>
+                  <td><span class="badge rounded-pill bg-danger">Overdue deadline</span></td>
+                </tr>
+                <tr>
+                  <td><img src="/assets/images/placeholder.jpeg" class="rounded d-block avatar-card" alt="avatar"></td>
+                  <td><a href="#">Wagner, Victor</a></td>
+                  <td>Greenhill School<br>Year 11</td>
+                  <td>Stage 1</td>
+                  <td>17/12/2020</td>
+                  <td><span class="badge rounded-pill bg-info text-dark">None</span></td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+          <nav aria-label="Page navigation example">
+            <ul class="pagination justify-content-center my-5">
+              <li class="page-item disabled">
+                <a class="page-link" href="#" tabindex="-1" aria-disabled="true">Previous</a>
+              </li>
+              <li class="page-item active"><a class="page-link" href="#">1</a></li>
+              <li class="page-item"><a class="page-link" href="#">2</a></li>
+              <li class="page-item"><a class="page-link" href="#">3</a></li>
+              <li class="page-item">
+                <a class="page-link" href="#">Next</a>
+              </li>
+            </ul>
+          </nav>
         </div>
       </div>
     </div>
   </div>
-</div>
