--- a/work-tray/index.html
+++ b/work-tray/index.html
@@ -18,190 +18,7 @@ title: Work tray
       </li>
     </ul>
     <!-- Search cases -->
-    <div class="row gx-0 mt-3 p-3 search-bar">
-      <div class="col-md-5 p-1">
-        <div class="input-group">
-          <input type="text" class="form-control" placeholder="Name or reference" aria-label="Search by name or reference" aria-describedby="button-addon2">
-          <button class="btn btn-secondary" type="button" id="button-addon2"><i class="bi bi-search"></i> Search</button>
-        </div>
-      </div>
-      <div class="col-md-7 p-1">
-        <a class="btn btn-secondary" href="#" data-bs-toggle="collapse" data-bs-target="#search-filters"><i class="bi bi-filter"></i> Filter</a>
-        <a class="btn btn-secondary hidden-mobile" href="#" data-bs-toggle="modal" data-bs-target="#saveSearchModal"><i class="bi bi-save"></i> Save</a>
-        <a class="btn btn-secondary hidden-mobile" href="#"><i class="bi bi-arrow-clockwise"></i> Reset</a>
-        <div class="input-group d-inline">
-          <button class="btn btn-secondary dropdown-toggle hidden-mobile" type="button" data-bs-toggle="dropdown" aria-expanded="false">Saved searches</button>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">New requests</a></li>
-            <li><a class="dropdown-item" href="#">My assessments</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Edit</a></li>
-          </ul>
-        </div>
-      </div>
-    </div>
-
-    <div class="collapse p-3" id="search-filters">
-      <form class="row row-cols-sm-3 g-3">
-        <div class="col-12">
-          <h6>Filter</h6>
-
-            <div class="dropdown me-3 mb-2">
-              <a href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
-                Case status <i class="bi bi-caret-down"></i>
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                <li><h6 class="dropdown-header">Assessment</h6></li>
-                <li><a class="dropdown-item" href="#">New request</a></li>
-                <li><a class="dropdown-item" href="#">Request</a></li>
-                <li><a class="dropdown-item" href="#">Assessment decision</a></li>
-                <li><a class="dropdown-item" href="#">Assessment not agreed</a></li>
-                <li><a class="dropdown-item" href="#">Assessment</a></li>
-                <li><a class="dropdown-item" href="#">Plan decision</a></li>
-                <li><a class="dropdown-item" href="#">Plan not agreed</a></li>
-                <li><a class="dropdown-item" href="#">Draft EHC Plan</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><h6 class="dropdown-header">Review</h6></li>
-                <li><a class="dropdown-item" href="#">Pending review</a></li>
-                <li><a class="dropdown-item" href="#">Arrange review</a></li>
-                <li><a class="dropdown-item" href="#">Contribute views</a></li>
-                <li><a class="dropdown-item" href="#">Meeting</a></li>
-                <li><a class="dropdown-item" href="#">Report</a></li>
-                <li><a class="dropdown-item" href="#">Review decision</a></li>
-                <li><a class="dropdown-item" href="#">Proposed amendment</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><h6 class="dropdown-header">Other</h6></li>
-                <li><a class="dropdown-item" href="#">Proposed amendment w/o review</a></li>
-                <li><a class="dropdown-item" href="#">Proposed ceased</a></li>
-                <li><a class="dropdown-item" href="#">Ceased EHC Plan</a></li>
-                <li><a class="dropdown-item" href="#">Closed outside of process</a></li>
-              </ul>
-            </div>
-            <div class="dropdown me-3 mb-2">
-              <a href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
-                Case co-ordinator <i class="bi bi-caret-down"></i>
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                <li><a class="dropdown-item" href="#">Adrian Cole</a></li>
-                <li><a class="dropdown-item" href="#">Blanche Fox</a></li>
-                <li><a class="dropdown-item" href="#">Ralph Williamson</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Unassigned</a></li>
-              </ul>
-            </div>
-            <div class="dropdown me-3 mb-2">
-              <a href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
-                Setting <i class="bi bi-caret-down"></i>
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                <li><a class="dropdown-item" href="#">Busy Bees Nursery</a></li>
-                <li><a class="dropdown-item" href="#">Greenhill School</a></li>
-                <li><a class="dropdown-item" href="#">St Mary's Primary School</a></li>
-                <li><a class="dropdown-item" href="#">The Tim Peake School of Technology</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Unattached</a></li>
-              </ul>
-            </div>
-            <div class="dropdown me-3 mb-2">
-              <a href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
-                Year group <i class="bi bi-caret-down"></i>
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                <li><a class="dropdown-item" href="#">Nursery</a></li>
-                <li><a class="dropdown-item" href="#">Reception</a></li>
-                <li><a class="dropdown-item" href="#">Year 1</a></li>
-                <li><a class="dropdown-item" href="#">Year 2</a></li>
-                <li><a class="dropdown-item" href="#">Year 3</a></li>
-                <li><a class="dropdown-item" href="#">Year 4</a></li>
-                <li><a class="dropdown-item" href="#">Year 5</a></li>
-                <li><a class="dropdown-item" href="#">Year 6</a></li>
-                <li><a class="dropdown-item" href="#">Year 7</a></li>
-                <li><a class="dropdown-item" href="#">Year 8</a></li>
-                <li><a class="dropdown-item" href="#">Year 9</a></li>
-                <li><a class="dropdown-item" href="#">Year 10</a></li>
-                <li><a class="dropdown-item" href="#">Year 11</a></li>
-                <li><a class="dropdown-item" href="#">Year 12</a></li>
-                <li><a class="dropdown-item" href="#">Year 13</a></li>
-                <li><a class="dropdown-item" href="#">Year 14</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">None recorded</a></li>
-              </ul>
-            </div>
-            <div class="dropdown me-3 mb-2">
-              <a href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
-                Last updated <i class="bi bi-caret-down"></i>
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                <li>
-                  <input type="date" class="form-control" id="lastUpdatedDateInput" placeholder="">
-              </li>
-              </ul>
-            </div>
-
-        </div>
-
-
-        <div class="col-12">
-
-            <div class="form-check">
-              <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-              <label class="form-check-label" for="flexCheckDefault">
-                Impending deadline
-              </label>
-            </div>
-            <div class="form-check mb-3">
-              <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-              <label class="form-check-label" for="flexCheckDefault">
-                Overdue deadline
-              </label>
-            </div>
-            <div class="form-check">
-              <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-              <label class="form-check-label" for="flexCheckDefault">
-                Imported plan
-              </label>
-            </div>
-            <div class="form-check">
-              <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-              <label class="form-check-label" for="flexCheckDefault">
-                Hide closed cases
-              </label>
-            </div>
-
-        </div>
-
-        <div class="col-12">
-
-            <div class="form-check">
-              <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-              <label class="form-check-label" for="flexCheckDefault">
-                Safeguarding
-              </label>
-            </div>
-            <div class="form-check">
-              <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-              <label class="form-check-label" for="flexCheckDefault">
-                EOTAS
-              </label>
-            </div>
-            <div class="form-check">
-              <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-              <label class="form-check-label" for="flexCheckDefault">
-                Looked after child
-              </label>
-            </div>
-            <div class="form-check mb-3">
-              <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-              <label class="form-check-label" for="flexCheckDefault">
-                NEET
-              </label>
-            </div>
-          </div>
-
-      </form>
-
-    </div>
-
+    {% include searchbar.html %}
 
     <div class="row">
       <div class="col py-4">
@@ -213,6 +30,7 @@ title: Work tray
                 <tr>
                   <th scope="col"></th>
                   <th scope="col">Name <i class="bi bi-sort-alpha-down"></i></th>
+                  <th scope="col">Year group</th>
                   <th scope="col">Setting</th>
                   <th scope="col">Status</th>
                   <th scope="col">Next due</th>
@@ -223,7 +41,8 @@ title: Work tray
                 <tr>
                   <td><img src="/assets/images/boy in a forest.jpg" class="rounded d-block avatar-card" alt="avatar"></td>
                   <td><a href="/case-view">Hanson, Alvin</a></td>
-                  <td>Greenhill School<br>Year 9</td>
+                  <td>Year 9</td>
+                  <td>Highfield Academy</td>
                   <td>Stage 1</td>
                   <td>17/12/2020</td>
                   <td></td>
@@ -231,7 +50,8 @@ title: Work tray
                 <tr>
                   <td><img src="/assets/images/boy running.jpg" class="rounded d-block avatar-card" alt="avatar"></td>
                   <td><a href="#">Holden, Ellery</a></td>
-                  <td>Greenhill School<br>Year 4</td>
+                  <td>Year 4</td>
+                  <td>Oak Junior School</td>
                   <td>Stage 1</td>
                   <td>17/12/2020</td>
                   <td><span class="badge rounded-pill bg-warning text-dark">Pending deadline</span></td>
@@ -239,7 +59,8 @@ title: Work tray
                 <tr>
                   <td><img src="/assets/images/girl at school.jpg" class="rounded d-block avatar-card" alt="avatar"></td>
                   <td><a href="#">Reid, Sienna</a></td>
-                  <td>Greenhill School<br>Year 2</td>
+                  <td>Year 2</td>
+                  <td>St Mary's Primary</td>
                   <td>Stage 1</td>
                   <td>17/12/2020</td>
                   <td></td>
@@ -247,7 +68,8 @@ title: Work tray
                 <tr>
                   <td><img src="/assets/images/teenager at college.jpg" class="rounded d-block avatar-card" alt="avatar"></td>
                   <td><a href="#">Tate, Chandler</a></td>
-                  <td>Greenhill School<br>Year 13</td>
+                  <td>Year 13</td>
+                  <td>Greenhill School</td>
                   <td>Stage 1</td>
                   <td>17/12/2020</td>
                   <td><span class="badge rounded-pill bg-danger">Overdue deadline</span></td>
@@ -255,7 +77,8 @@ title: Work tray
                 <tr>
                   <td><img src="/assets/images/placeholder.jpeg" class="rounded d-block avatar-card" alt="avatar"></td>
                   <td><a href="#">Wagner, Victor</a></td>
-                  <td>Greenhill School<br>Year 11</td>
+                  <td>Year 11</td>
+                  <td>Greenhill School</td>
                   <td>Stage 1</td>
                   <td>17/12/2020</td>
                   <td></td>
