--- a/tasks/index.html
+++ b/tasks/index.html
@@ -11,18 +11,18 @@ title: Work tray
     <!-- Tabs -->
     <ul class="nav nav-tabs">
       <li class="nav-item">
-        <a class="nav-link tab active" aria-current="page" href="/work-tray">Cases (79)</a>
+        <a class="nav-link tab" href="/work-tray">Cases (79)</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link tab" href="/tasks">Tasks (3)</a>
+        <a class="nav-link tab active" aria-current="page" href="/tasks">Tasks (3)</a>
       </li>
     </ul>
     <!-- Search cases -->
-    {% include search-cases.html %}
+    {% include search-tasks.html %}
 
     <div class="row">
       <div class="col py-4">
-        <p class="text-muted"><strong>1-5</strong> of <strong>5</strong> children or young people based on your current search options <a href="#" data-bs-toggle="modal" data-bs-target="#guidanceModal"><i class="bi bi-question-circle"></i></a></p>
+        <p class="text-muted"><strong>1-3</strong> of <strong>3</strong> tasks based on your current search options <a href="#" data-bs-toggle="modal" data-bs-target="#guidanceModal"><i class="bi bi-question-circle"></i></a></p>
           <!-- Search results -->
           <div class="table-responsive">
             <table class="table table-borderless align-middle">
@@ -31,37 +31,19 @@ title: Work tray
                   <th scope="col"></th>
                   <th scope="col">Name <i class="bi bi-sort-alpha-down"></i></th>
                   <th scope="col">Year group</th>
-                  <th scope="col">Setting</th>
-                  <th scope="col">Status</th>
-                  <th scope="col">Next due</th>
+                  <th scope="col">Task</th>
+                  <th scope="col">Stage</th>
+                  <th scope="col">Due</th>
                   <th scope="col">Alert</th>
                 </tr>
               </thead>
               <tbody>
                 <tr>
-                  <td><img src="/assets/images/boy in a forest.jpg" class="rounded d-block avatar-card" alt="avatar"></td>
-                  <td><a href="/case-view">Hanson, Alvin</a></td>
-                  <td>Year 9</td>
-                  <td>Highfield Academy</td>
-                  <td>Stage 1</td>
-                  <td>17/12/2020</td>
-                  <td></td>
-                </tr>
-                <tr>
-                  <td><img src="/assets/images/boy running.jpg" class="rounded d-block avatar-card" alt="avatar"></td>
-                  <td><a href="#">Holden, Ellery</a></td>
-                  <td>Year 4</td>
-                  <td>Oak Junior School</td>
-                  <td>Stage 1</td>
-                  <td>17/12/2020</td>
-                  <td><span class="badge rounded-pill bg-warning text-dark">Pending deadline</span></td>
-                </tr>
-                <tr>
                   <td><img src="/assets/images/girl at school.jpg" class="rounded d-block avatar-card" alt="avatar"></td>
                   <td><a href="#">Reid, Sienna</a></td>
                   <td>Year 2</td>
-                  <td>St Mary's Primary</td>
-                  <td>Stage 1</td>
+                  <td>Request for advice</td>
+                  <td>Assessment</td>
                   <td>17/12/2020</td>
                   <td></td>
                 </tr>
@@ -69,8 +51,8 @@ title: Work tray
                   <td><img src="/assets/images/teenager at college.jpg" class="rounded d-block avatar-card" alt="avatar"></td>
                   <td><a href="#">Tate, Chandler</a></td>
                   <td>Year 13</td>
-                  <td>Greenhill School</td>
-                  <td>Stage 1</td>
+                  <td>Setting consultation</td>
+                  <td>Draft plan</td>
                   <td>17/12/2020</td>
                   <td><span class="badge rounded-pill bg-danger">Overdue deadline</span></td>
                 </tr>
@@ -78,8 +60,8 @@ title: Work tray
                   <td><img src="/assets/images/placeholder.jpeg" class="rounded d-block avatar-card" alt="avatar"></td>
                   <td><a href="#">Wagner, Victor</a></td>
                   <td>Year 11</td>
-                  <td>Greenhill School</td>
-                  <td>Stage 1</td>
+                  <td>Request for information</td>
+                  <td>Review</td>
                   <td>17/12/2020</td>
                   <td></td>
                 </tr>
