Fix horizontal scroll
Fix horizontal scroll in the mobile view for the case page.

--- a/case-view/index.html
+++ b/case-view/index.html
@@ -7,20 +7,20 @@ title: Stage 5
 
   <div class="row container-fluid g-0">
     <div class="col-12 px-4 py-2 d-flex case-title justify-content-between">
-      <h5 class="m-0 p-0">Mason Hall</h5>
+      <h5 class="m-0 p-0">Alvin Hanson</h5>
       <p class="m-0 p-0">Plan issue due: 5 May 2021</p>
     </div>
   </div>
 
   <div class="row container-fluid g-0">
 
-    <div class="col-md-4 col-lg-3 order-2 order-md-2 px-2">
+    <div class="col-md-4 col-lg-3 order-2 order-md-2 px-3">
 
       {% include case-sidebar.html %}
 
     </div>
 
-    <div class="col-md-8 col-lg-9 order-1 order-md-2 px-2">
+    <div class="col-md-8 col-lg-9 order-1 order-md-2 px-3">
 
       {% include assessment-progress.html %}
 
