Add help page and parent dash

--- a/tasks/index.html
+++ b/tasks/index.html
@@ -3,9 +3,11 @@ layout: default
 title: Work tray
 ---
 
+{% include side-nav-coordinator.html %}
+
 <div class="row container-fluid page-content g-0">
   <!-- Page content -->
-  <div class="col work-tray-content pt-4 pb-3">
+  <div class="col-12 col-xxl-10 offset-xxl-1 work-tray-content pt-4 pb-3">
     <h2>My children and young people</h2>
     <p class="hidden-mobile">Quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur... <a href="#">read more</a></p>
     <!-- Tabs -->
