--- a/case-view/index.html
+++ b/case-view/index.html
@@ -3,6 +3,8 @@ layout: default
 title: Stage 5
 ---
 
+{% include side-nav-coordinator.html %}
+
 <div class="case-content">
 
   <div class="row container-fluid g-0">
@@ -14,13 +16,13 @@ title: Stage 5
 
   <div class="row container-fluid g-0">
 
-    <div class="col-md-4 col-lg-3 order-2 order-md-2 px-3">
+    <div class="col-md-4 col-lg-3 col-xxl-2 order-2 order-md-2 px-3 mt-4">
 
       {% include case-sidebar.html %}
 
     </div>
 
-    <div class="col-md-8 col-lg-9 order-1 order-md-2 px-3">
+    <div class="col-md-8 col-lg-9 col-xxl-8 offset-xxl-1 order-1 order-md-2 px-3">
 
       {% include assessment-progress.html %}
 
